# FF1Experiements

./: .gitignore  CMakeLists.txt
Fatal_Frame_1/: CMakeLists.txt
Fatal_Frame_1/main/: gamemain.h  glob.h
Fatal_Frame_1/outgame/: outgame.c  title.h
Headers/: GameMain.h  Glob.h  Types.h
Sources/: GameMain.c
headers/common/: glob.h  types.h
headers/ingame/: ig_init.h
headers/main/: gamemain.h  glob.h
headers/os/: system.h
headers/outgame/: outgame.h  title.h
sources/ingame/: ig_init.c  ig_init.h  ingame.c  ingame.h
sources/main/: gamemain.c  glob.c  main.c
sources/os/: system.c
sources/outgame/: outgame.c  outgame.h  title.c
